--- a/web/WEB-INF/static/css/main.css
+++ b/web/WEB-INF/static/css/main.css
@@ -3,6 +3,10 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI","微软雅黑 Light", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+.navbar-collapse{
+    background-color:steelblue;
+}
+
 .navbar-brand .icon{
     margin-left: 8px;
     margin-right: 8px;
@@ -26,6 +30,9 @@ body {
 .bg-white{
     background-color: #fff !important;
     box-shadow: 0px 0px 5px #aaa;
+}
+.bg-steelblue{
+    background-color:steelblue;!important; box-shadow:#778899 0px 0px 10px;
 }
 
 .logowhite{
